Fix menu scroll issues on mobile and add grey background to secondary submenu

--- a/version_control/Codurance_September2020/css/modules/menu-section.css
+++ b/version_control/Codurance_September2020/css/modules/menu-section.css
@@ -50,6 +50,10 @@
   color: white;
 }
 
+.secondary-submenu {
+  background-color: var(--athens-gray);
+}
+
 {% call utils.small_and_medium() %}
   .navigation-primary {
     padding-left: 20px;
@@ -268,7 +272,6 @@
   }
 
   .secondary-submenu {
-    background-color: var(--athens-gray);
     border-bottom-right-radius: 10px;
   }
 
