--- a/version_control/Codurance_September2020/css/partials/utilities-menu.css
+++ b/version_control/Codurance_September2020/css/partials/utilities-menu.css
@@ -64,10 +64,6 @@
 
 /* ID of the outer container of the Google search bar */
 .search-bar #___gcse_0  {
-  position: absolute;
-  right: 0;
-  top: -20%;
-  width: 100%;
   background: transparent;
   {{ utils.natus() }}
   font-weight: var(--heavy-font-weight);
@@ -268,6 +264,9 @@
     width: 0;
     overflow: hidden;
     max-width: 13.5rem;
+    position: absolute;
+    right: 0;
+    top: -20%;
   }
 
   .search-bar__button[aria-expanded="true"] + #___gcse_0 {
@@ -308,11 +307,9 @@
     display: none;
   }
 
-  .search-bar #___gcse_0 {
-    top: 105%;
-    left: 0;
-    max-width: calc(100% - 2rem);
-    margin-inline: auto;
+  .search-bar {
+    width: 100%;
+    margin-inline: 1rem;
   }
 {% endcall %} 
 
